deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: qmex-forms-ns

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qmex-forms-tenant-management-api
  namespace: qmex-forms-ns  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qmex-forms-tenant-management-api
  template:
    metadata:
      labels:
        app: qmex-forms-tenant-management-api
    spec:
      containers:
        - name: qmex-forms-tenant-management-api
          image: ${ACR_NAME}.azurecr.io/${TENANT_API_IMAGE_NAME}:${IMAGE_TAG}
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: "/app/persistent/global"
              name: volume-global
            - mountPath: "/app/persistent/tenant"
              name: volume-tenant
            - mountPath: "/app/persistent/temp"
              name: volume-temp
            - mountPath: "/app/persistent/queue"
              name: volume-queue
      volumes:
        - name: volume-global
          azureFile:
            secretName: qmex-forms-storage-secret
            shareName: global

        - name: volume-tenant
          azureFile:
            secretName: qmex-forms-storage-secret
            shareName: tenant

        - name: volume-temp
          azureFile:
            secretName: qmex-forms-storage-secret
            shareName: temp

        - name: volume-queue
          azureFile:
            secretName: qmex-forms-storage-secret
            shareName: queue

---
apiVersion: v1
kind: Service
metadata:
  name: qmex-forms-tenant-management-api-service
  namespace: qmex-forms-ns  
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: qmex-forms-tenant-management-api

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qmex-forms-app
  namespace: qmex-forms-ns  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qmex-forms-app
  template:
    metadata:
      labels:
        app: qmex-forms-app
    spec:
      containers:
        - name: qmex-forms-app
          image: ${ACR_NAME}.azurecr.io/${APP_IMAGE_NAME}:${IMAGE_TAG}
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: "/app/persistent/global"
              name: volume-global
            - mountPath: "/app/persistent/tenant"
              name: volume-tenant
            - mountPath: "/app/persistent/temp"
              name: volume-temp
            - mountPath: "/app/persistent/queue"
              name: volume-queue
      volumes:
        - name: volume-global
          azureFile:
            secretName: qmex-forms-storage-secret
            shareName: global

        - name: volume-tenant
          azureFile:
            secretName: qmex-forms-storage-secret
            shareName: tenant

        - name: volume-temp
          azureFile:
            secretName: qmex-forms-storage-secret
            shareName: temp

        - name: volume-queue
          azureFile:
            secretName: qmex-forms-storage-secret
            shareName: queue

---
apiVersion: v1
kind: Service
metadata:
  name: qmex-forms-app-service
  namespace: qmex-forms-ns  
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: qmex-forms-app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qmex-forms-app-ingress
  namespace: qmex-forms-ns
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/request-timeout: "60"
    appgw.ingress.kubernetes.io/health-probe-path: "/health"
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: "${SSL_CERT_NAME}"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: "${APP_HOST}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qmex-forms-app-service
                port:
                  number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qmex-forms-background-worker
  namespace: qmex-forms-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qmex-forms-background-worker
  template:
    metadata:
      labels:
        app: qmex-forms-background-worker
    spec:
      containers:
        - name: qmex-forms-background-worker
          image: ${ACR_NAME}.azurecr.io/${BACKGROUND_WORKER_IMAGE_NAME}:${IMAGE_TAG}
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 250m
              memory: 1Gi
          volumeMounts:
            - mountPath: "/app/persistent/global"
              name: volume-global
            - mountPath: "/app/persistent/tenant"
              name: volume-tenant
            - mountPath: "/app/persistent/temp"
              name: volume-temp
            - mountPath: "/app/persistent/queue"
              name: volume-queue
      volumes:
        - name: volume-global
          azureFile:
            secretName: qmex-forms-storage-secret
            shareName: global

        - name: volume-tenant
          azureFile:
            secretName: qmex-forms-storage-secret
            shareName: tenant

        - name: volume-temp
          azureFile:
            secretName: qmex-forms-storage-secret
            shareName: temp

        - name: volume-queue
          azureFile:
            secretName: qmex-forms-storage-secret
            shareName: queue
---
apiVersion: v1
kind: Service
metadata:
  name: qmex-forms-background-worker-service
  namespace: qmex-forms-ns
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: qmex-forms-background-worker
